--- a/frontend/html/scan.html
+++ b/frontend/html/scan.html
@@ -6,7 +6,7 @@
   <title>AI SkinSight</title>
   <meta name="description" content="Facial skin analysis application"/>
   <meta name="author" content="AI SkinSight"/>
-  <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="stylesheet" href="../CSS/style.css"/>
   <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   <style>
   .scan-flex-container {
@@ -166,8 +166,48 @@
         </div>
       </section>
     </main>
+    <!--Footer-->
+        <footer>
+            <div class="footer-container">
+                <div class="footer-content">
+                    <div class="footer-brand">
+                        <a href="homepage.html">AI SkinSight</a>
+                        <p>Scan your facial skin and detect issues free now.</p>
+                    </div>
+                    <div class="footer-links">
+                        <div class="link-column">
+                            <h3>Navigation</h3>
+                            <ul>
+                                <li><a href="homepage.html">Home</a></li>
+                                <li><a href="homepage.html">Explore</a></li>
+                            </ul>
+                        </div>
+                        <div class="link-column">
+                            <h3>Company</h3>
+                            <ul>
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Our team</a></li>
+                                <li><a href="#">Career</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="link-column">
+                            <h3>Legality</h3>
+                            <ul>
+                                <li><a href="#">Terms of Service</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Cookie Policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>&copy; 2025 AI SkinSight. All rights reserved</p>
+                </div>
+            </div>
+        </footer>
   </div>
 
-  <script src="../javascript/app.js"></script>
+  <script src="../JavaScript/app.js"></script>
 </body>
 </html>
