--- a/frontend/html/history.html
+++ b/frontend/html/history.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Scan History</title>
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../CSS/style.css" />
   <style>
     .session {
       border: 1px solid #ccc;
@@ -74,7 +74,47 @@
       <div id="historyContainer" style="max-width: 700px; margin: 0 auto;"></div>
     </main>
   </div>
-<script src="../javascript/app.js"></script>
+  <!--Footer-->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <div class="footer-brand">
+          <a href="homepage.html">AI SkinSight</a>
+          <p>Scan your facial skin and detect issues free now.</p>
+        </div>
+        <div class="footer-links">
+          <div class="link-column">
+            <h3>Navigation</h3>
+            <ul>
+              <li><a href="homepage.html">Home</a></li>
+              <li><a href="homepage.html">Explore</a></li>
+            </ul>
+          </div>
+          <div class="link-column">
+            <h3>Company</h3>
+            <ul>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Our team</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="link-column">
+            <h3>Legality</h3>
+            <ul>
+              <li><a href="#">Terms of Service</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Cookie Policy</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2025 AI SkinSight. All rights reserved</p>
+      </div>
+    </div>
+  </footer>
+<script src="../JavaScript/app.js"></script>
   <script>
     const historyContainer = document.getElementById("historyContainer");
 
