--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -6,7 +6,7 @@
     <title>AI SkinSight</title>
     <meta name="description" content="Facial skin analysis application" />
     <meta name="author" content="AI SkinSight" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
 </head>
 <body>
@@ -80,6 +80,6 @@
         </section>
 
     </div>
-<script src="../javascript/app.js"></script>
+<script src="../JavaScript/app.js"></script>
 </body>
 </html>
